# searchmcp

./: .gitignore  .pre-commit-config.yaml  README.md  checkpython.sh  config.yml  credentials.yml.dist  pyproject.toml  pyrightconfig.json  server.py
docs/: orientation.md  prd.md  rules-python.md
docs/reports/: qa-2026-01-24-15-04-11.md
src/searchmcp/: __init__.py  backends.py  cli.py  logging_config.py  main.py  params.py  server.py
tests/: __init__.py  conftest.py  test_backends.py  test_cli.py  test_logging_config.py  test_params.py  test_server.py
