[project]
name = "searchmcp"
version = "0.1.0"
description = "Web Search MCP Server using FastMCP and DuckDuckGo"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "ddgs>=7.0.0",
    "pysocks>=1.7.1",  # Required: SOCKS proxy support for httpx/requests Tor connections
    "requests>=2.28.0",  # HTTP client for Tor verification
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require Tor service)",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["pysocks"]
