[project]
name = "searchmcp"
version = "0.1.0"
description = "Web Search MCP Server using FastMCP and DuckDuckGo"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0b1",
    "ddgs>=7.0.0",
    "pydantic>=2.0",
    "httpx[socks]>=0.27",
    "typer>=0.12",
    "structlog>=24",
    "orjson>=3.10",
    "rich>=13",
    "stamina>=24",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require Tor service)",
]
addopts = "-m 'not integration'"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"

[tool.mypy]
mypy_path = "src"

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
searchmcp = "searchmcp.main:main"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/searchmcp"]
